# rebalance-OS

./: .gitignore  .mcp.json  4X4.md  AGENTS.md  ARCHITECTURE.md  CALENDAR_CONFIG_SETUP.md  CALENDAR_NEW_USER_SETUP.md  CALENDAR_PORTABILITY_AUDIT.md  CALENDAR_REPORTS.md  CALENDAR_SETUP_GUIDE.md  CHANGELOG.md  CLAUDE.md  GOOGLE_CALENDAR.md  MCP.md  MEMORY.md  PORTABILITY_SUMMARY.md  PROJECT.md  README.md  calendar_config.example.json  manifest.json  pyproject.toml
.claude/: settings.json
PROJECT/: cleanup.sh
ask_self/: ask_self_harness.json  ask_self_system_instructions.json
deploy/: INSTALL.md  rebalance-web-pull.service  rebalance-web-pull.timer  rebalance-web.env.example  rebalance-web.service
docs/: README.md  app.css  app.js  index.html
experimental/: drift-reminder-plan.md  gh-close-candidates-action-plan.md  gh_close_candidates_action.py  git-history-plan.md
logs/: agent-audit.json
scripts/: ask-self-ingest-throttled.py  ask-self-ingest.sh  ask-self-query.sh  build_extension.py  build_status.py  com.rebalance-os.daily-sync.plist  com.rebalance-os.pulse-sync.plist  daily_sync.sh  install_pulse_scheduler.sh  install_scheduler.sh  publish_gh_pages.sh  pulse_sync.sh  setup_calendar_oauth.py
server/: mcp_server.py
templates/: project-registry.template.md
tests/: test_agent_tags.py  test_build_status.py  test_calendar_aggregator.py  test_calendar_config.py  test_calendar_create_event_cli.py  test_calendar_helpers.py  test_calendar_reports.py  test_calendar_snap.py  test_calendar_weekly_report_cli.py  test_config_github_token.py  test_dashboard_cli.py  test_event_filtering.py  test_experimental_gh_close_candidates_action.py  test_git_pulse_collect_cli.py  test_git_pulse_health_check.py  (+18 more)
(+89 files in other folders)
