[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebalance-os"
version = "0.5.5"
description = "Local-first workday operating system with MCP tools and Obsidian ingest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "questionary>=2.0.1",
  "mcp>=1.0.0",
  "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
embeddings = [
  "mlx-embeddings>=0.1.0",
]

[project.scripts]
rebalance = "rebalance.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
