[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebalance-os"
version = "0.22.0"
description = "Local-first workday operating system with MCP tools and Obsidian ingest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "questionary>=2.0.1",
  "mcp>=1.0.0",
  "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
calendar = [
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.2.0",
]
embeddings = [
  "mlx-embeddings>=0.1.0",
]
web = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
]

[project.scripts]
rebalance = "rebalance.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rebalance.web" = ["templates/*.html", "static/*.css", "static/*.js"]
